crates/carta/tests/snapshots/golden_e2e__ipynb__latex__escaped-line-break-literal.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\protect\phantomsection\label{noesc}
line one\textbackslash{} line two
