crates/carta/tests/snapshots/golden_e2e__ipynb__latex__markdown-dialect.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\protect\phantomsection\label{dialect}
\begin{enumerate}
\item
  first
\item
  second
\item
  auto one
\item
  auto two
\end{enumerate}

1) prose only 2) still prose

Visit \url{http://example.com} or write
\href{mailto:user@example.com}{\nolinkurl{user@example.com}} or ping
\href{mailto:5@home}{\nolinkurl{5@home}}.

Nested \textbf{\emph{bold italic}} text.
