crates/carta/tests/snapshots/golden_e2e__ipynb__latex__math.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\protect\phantomsection\label{equations}
Inline math \(a^2 + b^2 = c^2\) within a sentence, and a display
equation:

\[E = mc^2\]
