crates/carta/tests/snapshots/golden_e2e__ipynb__latex__metadata.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\protect\phantomsection\label{body}
Document body.
