crates/carta/tests/snapshots/golden_e2e__ipynb__latex__notebook.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\protect\phantomsection\label{heading}
\section{Analysis}\label{analysis}

A short narrative cell before the computation.

\protect\phantomsection\label{compute}
\begin{verbatim}
total = 2 + 2
print(total)
\end{verbatim}

\begin{verbatim}
4
\end{verbatim}

\begin{verbatim}
4
\end{verbatim}

\protect\phantomsection\label{footer}
