crates/carta/tests/snapshots/golden_e2e__ipynb__latex__raw-mimetype.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\protect\phantomsection\label{embed}
\emph{passed through to the LaTeX writer}
