crates/carta/tests/snapshots/golden_e2e__ipynb__latex__raw.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\protect\phantomsection\label{embed}
