crates/carta/tests/snapshots/golden_e2e__ipynb__latex__reference-definition-spaces.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\protect\phantomsection\label{refspace}
See \href{my\%20file.html}{ref}.
